--- a/.lh/.gitignore.json
+++ b/.lh/.gitignore.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 1,
+            "activePatchIndex": 2,
             "patches": [
                 {
                     "date": 1622473621011,
@@ -12,6 +12,10 @@
                 {
                     "date": 1622473626562,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -16,9 +16,8 @@\n /tmp/*\n !/log/.keep\n !/tmp/.keep\n \n-<<<<<<< HEAD\n # TODO Comment out this rule if you are OK with secrets being uploaded to the repo\n config/initializers/secret_token.rb\n config/master.key\n \n@@ -65,18 +64,4 @@\n \n # Ignore uploaded files in development\n /storage/*\n !/storage/.keep\n-=======\n-# Ignore pidfiles, but keep the directory.\n-/tmp/pids/*\n-!/tmp/pids/\n-!/tmp/pids/.keep\n-\n-# Ignore uploaded files in development.\n-/storage/*\n-!/storage/.keep\n-.byebug_history\n-\n-# Ignore master key for decrypting credentials and more.\n-/config/master.key\n->>>>>>> f54b3de (FirstCommit)\n"
+                },
+                {
+                    "date": 1622537860981,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -47,8 +47,9 @@\n .powenv\n \n # Ignore Byebug command history file.\n .byebug_history\n+.lh\n \n # Ignore node_modules\n node_modules/\n \n"
                 }
             ],
             "date": 1622473621011,
