Add serializer, migration, controllers and configs

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ capybara-*.html
 *.orig
 rerun.txt
 pickle-email-*.html
+/.lh/*
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -24,9 +25,10 @@ config/master.key
 # Only include if you have production secrets in this file, which is no longer a Rails default
 # config/secrets.yml
 
-# dotenv
-# TODO Comment out this rule if environment variables can be committed
+# dotenv, dotenv-rails
+# TODO Comment out these rules if environment variables can be committed
 .env
+.env.*
 
 ## Environment normalization:
 /.bundle
@@ -48,7 +50,6 @@ bower.json
 
 # Ignore Byebug command history file.
 .byebug_history
-/.lh/*
 
 # Ignore node_modules
 node_modules/
@@ -66,3 +67,4 @@ yarn-debug.log*
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
+/public/uploads
